--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -76,7 +76,7 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: terraform init -var-file="dev.tfvars"
+        run: terraform init -upgrade -var-file="dev.tfvars"
         working-directory: ./storage
 
       # Checks that all Terraform configuration files adhere to a canonical format
