--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -84,6 +84,12 @@ jobs:
         run: terraform fmt -check
         working-directory: ./storage
 
+      # Azure Login
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       # Generates an execution plan for Terraform
       - name: Terraform Plan
         run: terraform plan -var-file="dev.tfvars" -input=false
