--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -92,6 +92,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          allow-no-subscriptions: true
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
