azure login setup

--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -91,9 +91,12 @@ jobs:
         with:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           allow-no-subscriptions: true
+          enable-AzPSSession: false
+          environment: azurecloud
+          audience: api://AzureADTokenExchange
+          auth-type: OIDC
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
