--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -107,7 +107,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           environment: azurecloud
-          auth-type: 'ServicePrincipal' # Ensure you're using Service Principal
+          auth-type: 'SERVICE_PRINCIPAL' # Ensure you're using Service Principal
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
