--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -106,7 +106,7 @@ jobs:
           # client-id: ${{ secrets.AZURE_CLIENT_ID }}
           # client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           # tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          # subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           environment: azurecloud
           auth-type: 'SERVICE_PRINCIPAL' # Ensure you're using Service Principal
 
