--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -86,30 +86,29 @@ jobs:
         working-directory: ./storage
 
       # Azure Login
-      # - name: Azure Login
-      #   uses: azure/login@v2
-      #   with:
-      #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      #     client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # Needed for service principal
-      #     allow-no-subscriptions: true
-      #     enable-AzPSSession: false
-      #     environment: azurecloud
-      #     audience: api://AzureADTokenExchange
-      #     auth-type: SERVICE_PRINCIPAL
-
-      - name: Azure Login using Service Principal (v1)
-        uses: azure/login@v1
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          # creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL_CREDENTIALS }} # Secret containing client-id, client-secret, and tenant-id
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          # client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # Needed for service principal
+          allow-no-subscriptions: true
+          enable-AzPSSession: false
           environment: azurecloud
-          auth-type: 'SERVICE_PRINCIPAL' # Ensure you're using Service Principal
+          audience: api://AzureADTokenExchange
+          # auth-type: SERVICE_PRINCIPAL
 
+      # - name: Azure Login using Service Principal (v1)
+      #   uses: azure/login@v1
+      #   with:
+      #     # creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL_CREDENTIALS }} # Secret containing client-id, client-secret, and tenant-id
+      #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      #     client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+      #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      #     environment: azurecloud
+      #     auth-type: 'SERVICE_PRINCIPAL' # Ensure you're using Service Principal
       # Generates an execution plan for Terraform
       - name: Terraform Plan
         run: terraform plan -var-file="dev.tfvars" -input=false
