--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -90,14 +90,13 @@ jobs:
         uses: azure/login@v2
         with:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: 73e7212d-b175-46d8-a0b5-4dd94069cdaf
+          client-id: 8bfa1606-4f7e-4988-b01b-afc6be71dd60
           # client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # Needed for service principal
           allow-no-subscriptions: true
           enable-AzPSSession: false
           environment: azurecloud
           audience: api://AzureADTokenExchange
-          # auth-type: SERVICE_PRINCIPAL
 
       # - name: Azure Login using Service Principal (v1)
       #   uses: azure/login@v1
