--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -53,6 +53,9 @@ permissions:
   id-token: write
   contents: read
 
+env:
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
 jobs:
   terraform:
     name: 'Terraform'
@@ -92,12 +95,11 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          # client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # Needed for service principal
           allow-no-subscriptions: true
           enable-AzPSSession: false
           environment: azurecloud
           audience: api://AzureADTokenExchange
-      
+
       - name: Azure CLI script
         uses: azure/cli@v2
         with:
@@ -117,8 +119,10 @@ jobs:
       #     auth-type: 'SERVICE_PRINCIPAL' # Ensure you're using Service Principal
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        run: terraform plan -var-file="dev.tfvars" -input=false
         working-directory: ./storage
+        run: terraform plan -var-file="dev.tfvars" -input=false
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
