--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -54,7 +54,7 @@ permissions:
   contents: read
 
 env:
-  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
 jobs:
   terraform:
