--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -3,6 +3,9 @@ name: 'storage-destroy'
 on:
   workflow_dispatch:
 
+env:
+  TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
 jobs:
   terraform-destroy:
     name: 'Terraform Destroy'
@@ -19,6 +22,10 @@ jobs:
 
       - name: Terraform Init
         run: terraform init -upgrade -var-file="dev.tfvars"
+        working-directory: ./storage
+
+      - name: Terraform Plan
+        run: terraform plan -var-file="dev.tfvars" -input=false
         working-directory: ./storage
 
       - name: Terraform Destroy
