--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -26,10 +26,22 @@ jobs:
         run: terraform init -upgrade -var-file="dev.tfvars"
         working-directory: ./storage
 
+      # Azure Login
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          allow-no-subscriptions: true
+          enable-AzPSSession: false
+          environment: azurecloud
+          audience: api://AzureADTokenExchange
+
       - name: Terraform Plan
         run: terraform plan -var-file="dev.tfvars" -input=false
         working-directory: ./storage
 
-      - name: Terraform Destroy
-        run: terraform destroy -var-file="dev.tfvars" -auto-approve
-        working-directory: ./storage
+      # - name: Terraform Destroy
+      #   run: terraform destroy -var-file="dev.tfvars" -auto-approve
+      #   working-directory: ./storage
