--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -1,22 +1,32 @@
 name: 'storage-destroy'
 
 on:
-  push:
-    branches: ['feature/poc']
+  # push:
+  #   branches: ['feature/poc']
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Select an Environment'
+        required: true
+        default: 'dev'
+        type: choice
+        options:
+          - dev
+          - sit
+          - uat
 
 permissions:
   id-token: write
   contents: read
 
-# env:
-# TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+env:
+  TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
 jobs:
   terraform-destroy:
     name: 'Terraform Destroy'
     runs-on: ubuntu-latest
-    environment: development
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +37,7 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
-        run: terraform init -upgrade -var-file="dev.tfvars"
+        run: terraform init -upgrade
         working-directory: ./storage
 
       # Azure Login
@@ -41,12 +51,21 @@ jobs:
           enable-AzPSSession: false
           environment: azurecloud
           audience: api://AzureADTokenExchange
-          # auth-type: oidc
+
+      # Set Azure subscription
+      - name: Set Azure Subscription
+        run: |
+          echo "Set Azure Subscription"
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Plan
-        run: terraform plan -var-file="dev.tfvars" -input=false
+        run: |
+          echo "Terraform plan for ${{ github.event.inputs.environment }}"
+          terraform plan -var-file="${{ github.event.inputs.environment }}.tfvars" -input=false
         working-directory: ./storage
 
-      # - name: Terraform Destroy
-      #   run: terraform destroy -var-file="dev.tfvars" -auto-approve
-      #   working-directory: ./storage
+      - name: Terraform Destroy
+        run: |
+          echo "Terraform destroy for ${{ github.event.inputs.environment }}"
+          terraform destroy -var-file="${{ github.event.inputs.environment }}.tfvars" -auto-approve -input=false
+        working-directory: ./storage
