--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -78,6 +78,14 @@ jobs:
         shell: bash
 
     steps:
+      # Set Azure subscription
+      - name: Debug
+        run: |
+          echo "Github: ${{ github }}"
+          echo "Environment: ${{ github.event.inputs.environment }}"
+          echo "Event Name: ${{ github.event_name }}"
+          echo "s: ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v4
@@ -110,6 +118,12 @@ jobs:
           environment: azurecloud
           audience: api://AzureADTokenExchange
 
+      # Set Azure subscription
+      - name: Set Azure Subscription
+        run: |
+          echo "Set Azure Subscription"
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - name: Azure CLI script
         uses: azure/cli@v2
         with:
@@ -130,7 +144,3 @@ jobs:
         if: github.event_name == 'pull_request'
         run: terraform apply -var-file=${{ github.event.inputs.environment }}.tfvars -auto-approve -input=false
         working-directory: ./storage
-
-      - name: Debug GitHub Context
-        run: |
-          echo "Branch: ${{ github }}, Event: ${{ github.event_name }}"
