--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -2,8 +2,8 @@
 name: 'storage'
 
 on:
-  # push:
-  #   branches: ['feature/poc']
+  push:
+    branches: ['feature/poc']
 
   workflow_dispatch:
     inputs:
