--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -23,6 +23,7 @@ permissions:
 
 env:
   TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  environment: ${{ github.event.inputs.environment || 'dev' }} # Default to dev for auto deployment
 
 jobs:
   terraform:
@@ -39,7 +40,7 @@ jobs:
       # Set Azure subscription
       - name: Debug
         run: |
-          echo "Github: ${{ github }}"
+          echo "Github: ${{ toJson(github) }}"
           echo "Environment: ${{ github.event.inputs.environment }}"
           echo "Event Name: ${{ github.event_name }}"
           echo "s:  ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
