--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -48,6 +48,10 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
+      # Check Terraform version to verify installation
+      - name: Check Terraform Version
+        run: terraform version
+
       - name: Terraform Init
         run: terraform init -upgrade
         working-directory: ./storage
@@ -78,9 +82,13 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./storage
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        # env:
+        #   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
+
+      # Check Azure CLI version for debugging
+      - name: Check Azure CLI Version
+        run: az --version
 
       - name: Terraform Apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
