--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -37,6 +37,10 @@ jobs:
     steps:
       - name: Debug
         run: |
+          echo "Shell: $SHELL"
+          echo "Working Directory: $(pwd)"
+          echo "Environment Variables:"
+          printenv
           echo "Github: ${{ toJson(github) }}"
           echo "Environment: ${{ env.DEPLOY_ENV }}"
           echo "Event Name: ${{ github.event_name }}"
