--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -33,8 +33,6 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
         run: terraform init -upgrade
@@ -60,12 +58,12 @@ jobs:
 
       - name: Terraform Plan
         run: |
-          echo "Terraform plan for ${{ DEPLOY_ENV }}"
-          terraform plan -var-file=${{ DEPLOY_ENV }}.tfvars -input=false
+          echo "Terraform plan for ${{ env.DEPLOY_ENV }}"
+          terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
         working-directory: ./storage
 
       - name: Terraform Destroy
         run: |
-          echo "Terraform destroy for ${{ DEPLOY_ENV }}"
-          terraform destroy -var-file=${{ DEPLOY_ENV }}.tfvars -auto-approve -input=false
+          echo "Terraform destroy for ${{ env.DEPLOY_ENV }}"
+          terraform destroy -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
         working-directory: ./storage
