--- a/.github/workflows/tf_setup.yml
+++ b/.github/workflows/tf_setup.yml
@@ -2,12 +2,12 @@
 name: 'tf_setup'
 
 on:
-  pull_request:
-    branches:
-      - main # Trigger on PR to main branch (PR validation)
-  push:
-    branches:
-      - main # Trigger on push to main after PR merge (Terraform apply)
+  # pull_request:
+  #   branches:
+  #     - main # Trigger on PR to main branch (PR validation)
+  # push:
+  #   branches:
+  #     - main # Trigger on push to main after PR merge (Terraform apply)
 
   workflow_dispatch:
     inputs:
