--- a/.github/workflows/tf_setup.yml
+++ b/.github/workflows/tf_setup.yml
@@ -64,6 +64,6 @@ jobs:
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
 
       - name: Terraform Apply
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
         working-directory: ./tf_setup
