--- a/storage/dev-backend.config
+++ b/storage/dev-backend.config
@@ -3,4 +3,4 @@ resource_group_name  = "terraform_rg"
 storage_account_name = "sttfstate2025dev"
 container_name       = "tfstate"
 key                  = "terraform.tfstate"
-use_azuread_auth     = true
+# use_azuread_auth     = true
