--- a/storage/dev-backend.config
+++ b/storage/dev-backend.config
@@ -1,4 +1,5 @@
 # dev backend.config
+subscription_id      = env.AZURE_SUBSCRIPTION_ID
 resource_group_name  = "terraform_rg"
 storage_account_name = "sttfstate2025dev"
 container_name       = "tfstate"
