--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -27,6 +27,8 @@ permissions:
 env:
   TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   DEPLOY_ENV: ${{ github.event.inputs.environment || 'dev' }} # Default to dev for push
+  BC_resource_group: terraform_rg # parameterise
+  BC_storage_account_name: sttfstate2025dev # parameterise
 
 jobs:
   terraform:
@@ -62,7 +64,14 @@ jobs:
         run: az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
-        run: terraform init -backend-config=${{ env.DEPLOY_ENV }}-backend.config --upgrade
+        # run: terraform init -backend-config=${{ env.DEPLOY_ENV }}-backend.config --upgrade
+        run: |
+          terraform init \
+          -backend-config="subscription_id=${var.TF_VAR_subscription_id}" \
+          -backend-config="resource_group_name=${var.BC_resource_group}" \
+          -backend-config="storage_account_name=${var.BC_storage_account_name}" \
+          -backend-config="container_name=tfstate" \
+          -backend-config="key=terraform.tfstate"
         working-directory: ./storage
 
       - name: Terraform Format
