--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -67,9 +67,9 @@ jobs:
         # run: terraform init -backend-config=${{ env.DEPLOY_ENV }}-backend.config --upgrade
         run: |
           terraform init \
-          -backend-config="subscription_id=${var.TF_VAR_subscription_id}" \
-          -backend-config="resource_group_name=${var.BC_resource_group}" \
-          -backend-config="storage_account_name=${var.BC_storage_account_name}" \
+          -backend-config="subscription_id=${TF_VAR_subscription_id}" \
+          -backend-config="resource_group_name=${BC_resource_group}" \
+          -backend-config="storage_account_name=${BC_storage_account_name}" \
           -backend-config="container_name=tfstate" \
           -backend-config="key=terraform.tfstate"
         working-directory: ./storage
