--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -21,6 +21,8 @@ permissions:
 env:
   TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   DEPLOY_ENV: ${{ github.event.inputs.environment }}
+  BC_resource_group: terraform_rg # TF state backend storage resource group name
+  BC_storage_account_name: sttfstate2025dev # TF state backend storage account name
 
 jobs:
   terraform-destroy:
@@ -35,7 +37,13 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Init
-        run: terraform init -upgrade
+        run: |
+          terraform init \
+            -backend-config="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
+            -backend-config="resource_group_name=${{ env.BC_resource_group }}" \
+            -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
+            -backend-config="container_name=tfstate" \
+            -backend-config="key=storage-${{ env.DEPLOY_ENV }}-terraform.tfstate"
         working-directory: ./storage
 
       # Azure Login
