--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -37,17 +37,8 @@ jobs:
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
-      - name: Debug
-        run: |
-          echo "Environment: ${{ env.DEPLOY_ENV }}"
-          echo "Event Name: ${{ github.event_name }}"
-          echo "s:  ${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
 
       - name: Azure Login
         uses: azure/login@v2
@@ -62,6 +53,9 @@ jobs:
 
       - name: Set Azure Subscription
         run: az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Init
         run: |
@@ -79,10 +73,9 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./storage
-        # env:
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
 
       - name: Terraform Apply
-        # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
         working-directory: ./storage
