--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -2,11 +2,11 @@ name: 'storage'
 
 on:
   pull_request:
-    branches:
-      - main # Trigger on PR to main branch (PR validation)
+    paths:
+      - storage/** # Trigger on PR to main branch (PR validation)
   push:
-    branches:
-      - main # Trigger on push to main after PR merge (Terraform apply)
+    paths:
+      - storage/** # Trigger on push to main after PR merge (Terraform apply)
 
   workflow_dispatch:
     inputs:
