--- a/.github/workflows/functionapp.yml
+++ b/.github/workflows/functionapp.yml
@@ -66,7 +66,7 @@ jobs:
             -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
             -backend-config="container_name=tfstate" \
             -backend-config="key=${{ github.workflow }}-${{ env.DEPLOY_ENV }}-terraform.tfstate"
-        working-directory: ./storage
+        working-directory: ./functionapp
 
       - name: Terraform Format
         run: terraform fmt -check
