--- a/.github/workflows/functionapp.yml
+++ b/.github/workflows/functionapp.yml
@@ -36,6 +36,10 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'dev' }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./functionapp1 # Set the working directory for all steps
 
     steps:
       - name: Checkout
@@ -66,17 +70,13 @@ jobs:
             -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
             -backend-config="container_name=tfstate" \
             -backend-config="key=${{ github.workflow }}-${{ env.DEPLOY_ENV }}-terraform.tfstate"
-        working-directory: ./functionapp
 
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: ./functionapp
 
       - name: Terraform Plan
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
-        working-directory: ./functionapp
 
       - name: Terraform Apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
-        working-directory: ./functionapp
