--- a/.github/workflows/storage-destroy.yml
+++ b/.github/workflows/storage-destroy.yml
@@ -29,6 +29,11 @@ jobs:
     name: 'Terraform Destroy'
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: storage # Set the working directory for all steps
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -62,16 +67,13 @@ jobs:
             -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
             -backend-config="container_name=tfstate" \
             -backend-config="key=storage-${{ env.DEPLOY_ENV }}-terraform.tfstate"
-        working-directory: ./storage
 
       - name: Terraform Plan
         run: |
           echo "Terraform plan for ${{ env.DEPLOY_ENV }}"
           terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
-        working-directory: ./storage
 
       - name: Terraform Destroy
         run: |
           echo "Terraform destroy for ${{ env.DEPLOY_ENV }}"
           terraform destroy -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
-        working-directory: ./storage
