--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -31,10 +31,14 @@ env:
   BC_storage_account_name: sttfstate2025dev # TF state backend storage account name
 
 jobs:
-  terraform:
+  storage-terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'dev' }}
+    defaults:
+      run:
+        shell: bash
+        working-directory: storage # Set the working directory for all steps
 
     steps:
       - name: Checkout
@@ -65,17 +69,13 @@ jobs:
             -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
             -backend-config="container_name=tfstate" \
             -backend-config="key=${{ github.workflow }}-${{ env.DEPLOY_ENV }}-terraform.tfstate"
-        working-directory: ./storage
 
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: ./storage
 
       - name: Terraform Plan
-        working-directory: ./storage
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
 
       - name: Terraform Apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
-        working-directory: ./storage
