--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -5,8 +5,10 @@ on:
     paths:
       - storage/** # Trigger on PR to main branch (PR validation)
   push:
+    branches:
+      - main # Trigger on push to main after PR merge (Terraform apply)
     paths:
-      - storage/** # Trigger on push to main after PR merge (Terraform apply)
+      - storage/** # Trigger only if there are changes in storage directory
 
   workflow_dispatch:
     inputs:
