--- a/.github/workflows/keyvault.yml
+++ b/.github/workflows/keyvault.yml
@@ -80,5 +80,5 @@ jobs:
         run: terraform plan -var-file=${{ env.DEPLOY_ENV }}.tfvars -input=false
 
       - name: Terraform Apply
-        # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -var-file=${{ env.DEPLOY_ENV }}.tfvars -auto-approve -input=false
