--- a/.github/workflows/functionapp-destroy.yml
+++ b/.github/workflows/functionapp-destroy.yml
@@ -35,7 +35,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: functionapp # Set the working directory for all steps
+        working-directory: ./functionapp # Set the working directory for all steps
 
     steps:
       - name: Debug Trigger Source
