--- a/.github/workflows/functionapp-destroy.yml
+++ b/.github/workflows/functionapp-destroy.yml
@@ -74,6 +74,7 @@ jobs:
             -backend-config="storage_account_name=${{ env.BC_storage_account_name }}" \
             -backend-config="container_name=tfstate" \
             -backend-config="key=functionapp-${{ env.DEPLOY_ENV }}-terraform.tfstate"
+        working-directory: functionapp
 
       - name: Terraform Plan
         run: |
